# zem-logistics

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  migration_log.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: main_zem-logistics.yml  main_zem-warehouse.yml
static/css/: styles.css
static_root/css/: styles.css
warehouse/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  w_forms.py  w_models.py  w_views.py  widgets.py
warehouse/forms/: clearance_form.py  container_form.py  customer_form.py  offload_form.py  order_form.py  packling_list_form.py  pallet_form.py  quote_form.py  retrieval_form.py  shipment_form.py  upload_file.py  warehouse_form.py
warehouse/migrations/: 0001_initial.py  0002_container_packinglist_remove_order_departure_port_and_more.py  0002_packinglist_is_shipped_and_more.py  0002_rename_container_id_container_container_iid_and_more.py  0003_container_id_packinglist_container_id_and_more.py  0003_packinglist_is_shipment_schduled.py  0003_zemwarehouse_address.py  0004_alter_container_id.py  0004_packinglist_shipment_appointmend.py  0004_rename_container_iid_container_container_number_and_more.py  0005_alter_container_port_arrived_at_and_more.py  0005_rename_shipment_appointmend_packinglist_shipment_appointment.py  0006_alter_container_customer_name.py  0006_packinglist_shipment_batch_number.py  0007_alter_packinglist_total_weight_kg_and_more.py  0007_shipment_remove_packinglist_is_shipment_schduled_and_more.py  0011_alter_order_eta.py  (+451 more)
zemlogistics/: asgi.py  settings.py  urls.py  wsgi.py
(+484 files in other folders)
