[tool.poetry]
name = "zem-warehouse"
version = "0.1.0"
description = ""
authors = ["Yuxiang Li"]
readme = "README.md"
packages = [{include = "zem_warehouse"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-bootstrap4 = "^23.2"
psycopg2-binary = "^2.9.9"
pytz = "^2023.4"
reportlab = "^4.0.9"
xhtml2pdf = "^0.2.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
